1. Checkbox validation in Service Slip 2. Fixed the overflow checkbox background in Participant's Signature column 3. Disclaimer input text fixed

--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -1,6 +1,9 @@
 .body-padding {
 	padding: 20px 20px 10px;
 }
+.block {
+	display: block;
+}
 .flex {
 	display: flex;
 }
@@ -181,6 +184,12 @@ input:focus {
 [ Heights ]*/
 .height-20 {
 	height: 20px;
+}
+.height-34 {
+	height: 34px!important;
+}
+.height-35 {
+	height: 35px!important;
 }
 .height-50 {
 	height: 50px;
